Fixed image overflow in article

--- a/frontend/src/components/Articles/Article/Article.css
+++ b/frontend/src/components/Articles/Article/Article.css
@@ -14,7 +14,6 @@
     }
 
     .article img {
-        height: 100%;
         max-width: 100%;
     }
 
